add ai to candidates
